salesforce_sfdx/main/default/objects/NewBusiness__c/NewBusiness__c.object-meta.xml
<CustomObject>
    <label>Lead Portal Web</label>
    <nameField>
        <displayFormat>L-{0}</displayFormat>
        <label>Lead</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leads Portal Web</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>