salesforce_sfdx/main/default/objects/NewBusiness__c/fields/OSFMX_BusinessType__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_BusinessType__c</fullName>
    <label>Tipo de negocio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas Natural</fullName>
            </value>
            <value>
                <fullName>Electricidad</fullName>
            </value>
            <value>
                <fullName>Otras soluciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>