salesforce_sfdx/main/default/objects/NewBusiness__c/fields/OSFMX_EnergyDemand__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_EnergyDemand__c</fullName>
    <label>Tiene demanda energética mayor a 1 MW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>