salesforce_sfdx/main/default/objects/NewBusiness__c/fields/OSFMX_FuelQuantity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FuelQuantity__c</fullName>
    <label>Cantidad de combustible que usas al mes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>