salesforce_sfdx/main/default/objects/NewBusiness__c/fields/OSFMX_FuelUse__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_FuelUse__c</fullName>
    <label>Uso del combustible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Calderas</fullName>
            </value>
            <value>
                <fullName>Calefacción</fullName>
            </value>
            <value>
                <fullName>Generación eléctrica</fullName>
            </value>
            <value>
                <fullName>Hornos</fullName>
            </value>
            <value>
                <fullName>Quemadores</fullName>
            </value>
            <value>
                <fullName>Secado</fullName>
            </value>
            <value>
                <fullName>Vapor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>