salesforce_sfdx/main/default/objects/NewBusiness__c/fields/OSFMX_NewBusinessCity__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NewBusinessCity__c</fullName>
    <label>Ciudad</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>