salesforce_sfdx/main/default/objects/NewBusiness__c/fields/OSFMX_NewBusinessPostalCode__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NewBusinessPostalCode__c</fullName>
    <label>Código postal</label>
    <length>5</length>
    <type>Text</type>
</CustomField>