salesforce_sfdx/main/default/objects/NewBusiness__c/fields/OSFMX_NewBusinessStreet__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_NewBusinessStreet__c</fullName>
    <label>Calle</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>