salesforce_sfdx/main/default/objects/NewBusiness__c/fields/OSFMX_SearchingRenewableEnergy__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_SearchingRenewableEnergy__c</fullName>
    <label>Está buscando energía renovable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>