salesforce_sfdx/main/default/objects/NewBusiness__c/fields/OSFMX_UserQualifiedPower__c.field-meta.xml
<CustomField>
    <fullName>OSFMX_UserQualifiedPower__c</fullName>
    <label>¿Es usuario calificado de electricidad?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>