salesforce_sfdx/main/default/objects/NewBusiness__c/recordTypes/Electricidad.recordType-meta.xml
<RecordType>
    <fullName>Electricidad</fullName>
    <active>true</active>
    <label>Electricidad</label>
</RecordType>