salesforce_sfdx/main/default/objects/NewBusiness__c/recordTypes/GasNatural.recordType-meta.xml
<RecordType>
    <fullName>GasNatural</fullName>
    <active>true</active>
    <label>Gas Natural</label>
</RecordType>