salesforce_sfdx/main/default/objects/NewBusiness__c/recordTypes/Otrassoluciones.recordType-meta.xml
<RecordType>
    <fullName>Otrassoluciones</fullName>
    <active>true</active>
    <label>Otras soluciones</label>
</RecordType>