salesforce_sfdx/main/default/objects/NewBusiness__c/validationRules/SolonumeroCodigoPostalCotizarGasNat.validationRule-meta.xml
<ValidationRule>
    <fullName>SolonumeroCodigoPostalCotizarGasNat</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(OSFMX_NewBusinessPostalCode__c)),NOT(ISNUMBER(OSFMX_NewBusinessPostalCode__c)))</errorConditionFormula>
    <errorDisplayField>OSFMX_NewBusinessPostalCode__c</errorDisplayField>
    <errorMessage>Debe ingresar valores numéricos.</errorMessage>
</ValidationRule>